JumpScript/tests/baselines/reference/scannerNumericLiteral6.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral6.jump(1,4): error TS1124: Digit expected.


==== tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral6.jump (1 errors) ====
    1e+
       
!!! error TS1124: Digit expected.